# Editor-Hexadecimal

./: .clang-format  .gitignore  CMakeLists.txt  EditorHexa.cbp  EditorHexa.depend  EditorHexa.layout  README.md  build.sh  file.txt
EditorHexa/: EditorHexa.cbp  EditorHexa.depend
src/: main.c  udf.c  udf.h
